--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "engines":{"node": "13.2.0"},
   "author": "charles ugbana",
   "license": "ISC",
   "dependencies": {
